grafana: Fix organisation so anonymous login works
Signed-off-by: Alex J Lennon <ajlennon@dynamicdevices.co.uk>

--- a/grafana/grafana.ini
+++ b/grafana/grafana.ini
@@ -3,3 +3,6 @@ data = /data/grafana
 
 [auth.anonymous]
 enabled = true
+
+# specify organization name that should be used for unauthenticated users
+org_name = DoES
