docker-compose: Disable bridge container glue code
As we're now going to use node-red to persist MQtt messages to InfluxDB

Signed-off-by: Alex J Lennon <ajlennon@dynamicdevices.co.uk>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,16 +32,9 @@ services:
     build: ./mosquitto
     ports:
       - "1883:1883"
-  bridge:
-    restart: always
-    build: ./bridge
-    depends_on:
-     - influxdb
-     - mosquitto
-    
-#  sensor:
-#    build: ./sensor
-#    privileged: true
+#  bridge:
 #    restart: always
+#    build: ./bridge
 #    depends_on:
 #     - influxdb
+#     - mosquitto
