--- a/grafana/Dockerfile.template
+++ b/grafana/Dockerfile.template
@@ -11,11 +11,13 @@ RUN install_packages \
       libfontconfig1 \
       ucf
 
-RUN if [ "%%BALENA_MACHINE_NAME%%" = "raspberry-pi" ]; then \
-    curl -o /tmp/grafana.deb https://raw.githubusercontent.com/trashware/grafana-rpi-zero/master/grafana_6.0.1_armhf.deb; \
-  else \
-    curl -o /tmp/grafana.deb https://dl.grafana.com/oss/release/grafana_6.0.2_armhf.deb; \
-  fi
+RUN if [ "%%BALENA_MACHINE_NAME%%" = "intel-nuc" ]; then \
+      curl -o /tmp/grafana.deb https://dl.grafana.com/oss/release/grafana_6.4.2_amd64.deb; \
+    elif [ "%%BALENA_MACHINE_NAME%%" = "raspberry-pi" ]; then \
+      curl -o /tmp/grafana.deb https://raw.githubusercontent.com/trashware/grafana-rpi-zero/master/grafana_6.0.1_armhf.deb; \
+    else \
+      curl -o /tmp/grafana.deb https://dl.grafana.com/oss/release/grafana_6.0.2_armhf.deb; \
+    fi
 
 RUN dpkg -i /tmp/grafana.deb && rm /tmp/grafana.deb
 
