--- a/nodered/Dockerfile.template
+++ b/nodered/Dockerfile.template
@@ -2,7 +2,7 @@ FROM balenalib/%%BALENA_MACHINE_NAME%%-alpine-node
 
 RUN apk --no-cache add nodejs nodejs-npm git
 
-RUN npm install -g node-red
+RUN npm install -g node-red node-red-dashboard
 RUN git clone https://github.com/mblackstock/node-red-contrib-influxdb.git
 RUN cd node-red-contrib-influxdb && npm install -g
 
