--- a/influxdb/Dockerfile.template
+++ b/influxdb/Dockerfile.template
@@ -1,7 +1,1 @@
-FROM balenalib/%%BALENA_MACHINE_NAME%%-alpine
-
-RUN apk add influxdb
-
-RUN sed -i 's|/var/lib/influxdb|/data/influxdb|g' /etc/influxdb/influxdb.conf
-
-CMD influxd
+FROM --platform=linux/arm influxdb:latest
