Rename sense-data to influxdb-data to stick with convention, WARNING WILL BREAK DATA PERSISTENCE ON OLDER DEVICES

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '2'
 volumes:
-    sense-data:
+    influxdb-data:
     nodered-data:
     grafana-data:
 services:
@@ -17,7 +17,7 @@ services:
     environment:
       - INFLUXDB_DB=ming_default
     volumes:
-      - 'sense-data:/data'
+      - 'influxdb-data:/data'
     ports:
       - "8086:8086"
   grafana:
