--- a/grafana/Dockerfile.sane
+++ b/grafana/Dockerfile.sane
@@ -1,3 +1,3 @@
-FROM grafana/grafana:master
+FROM grafana/grafana:6.4.4
 
 COPY ./datasources/datasources.yaml /etc/grafana/provisioning/datasources/datasources.yaml
