--- a/grafana/Dockerfile.template
+++ b/grafana/Dockerfile.template
@@ -1,3 +1,3 @@
-FROM --platform=linux/arm grafana/grafana:6.4.4
+FROM --platform=linux/arm grafana/grafana:master
 
 COPY ./datasources/datasources.yaml /etc/grafana/provisioning/datasources/datasources.yaml
