--- a/jupyterlab/Dockerfile.template
+++ b/jupyterlab/Dockerfile.template
@@ -1,14 +1,15 @@
 FROM balenalib/%%BALENA_MACHINE_NAME%%-debian
 
-RUN install_packages nodejs npm
-RUN install_packages python3 python3-pip python3-dev python3-zmq python3-pandas python3-setuptools python3-markupsafe python3-prometheus-client python3-tornado python3-wheel build-essential
-RUN install_packages tini
+RUN install_packages nodejs npm python3 python3-pip python3-dev python3-zmq python3-pandas python3-setuptools python3-markupsafe python3-prometheus-client python3-tornado python3-wheel build-essential tini
 COPY start.sh /usr/src/app/jupyter/start.sh
 
 COPY requirements.txt /root/
 RUN pip3 install -r /root/requirements.txt && \
     jupyter lab --generate-config
 
+# This usage of Tini is in order to prevent potential issues with PID reaping as mentioned here:
+# https://jupyter-notebook.readthedocs.io/en/stable/public_server.html
+ 
 ENTRYPOINT ["/usr/bin/tini", "--"]
 RUN mkdir /data
 
