--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,7 @@ services:
       - GF_AUTH_ANONYMOUS_ENABLED=true
       - GF_AUTH_ANONYMOUS_ORG_ROLE=Viewer
     ports:
-      - "80:3000"
+      - "3000:3000"
     volumes:
       - 'grafana-data:/data'
     depends_on:
@@ -45,7 +45,14 @@ services:
       - "8888:8888"
     volumes:
       - 'jupyterlab-data:/data'
-
+  ap:
+    build: ./ap
+    restart: always
+    network_mode: host
+    privileged: true
+    labels:
+      io.balena.features.dbus: '1'
+      io.balena.features.firmware: '1'
 #  bridge:
 #    restart: always
 #    build: ./bridge
