Explicitly add curl to package list, for some reason Pi baseimage doesn't have this

--- a/ap/Dockerfile.template
+++ b/ap/Dockerfile.template
@@ -21,7 +21,7 @@ ENV DEVICE_TYPE=%%RESIN_MACHINE_NAME%%
 
 # Use apt-get to install dependencies
 RUN apt-get update && apt-get install -yq --no-install-recommends \
-    dnsmasq && \
+    dnsmasq curl && \
     apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # Install resin-wifi-connect
