--- a/jupyterlab/Dockerfile.template
+++ b/jupyterlab/Dockerfile.template
@@ -1,6 +1,6 @@
 FROM balenalib/%%BALENA_MACHINE_NAME%%-debian
 
-RUN install_packages nodejs npm python3 python3-pip python3-dev python3-zmq python3-pandas python3-setuptools python3-markupsafe python3-prometheus-client python3-tornado python3-wheel build-essential tini
+RUN install_packages curl nodejs npm python3 python3-pip python3-dev python3-zmq python3-pandas python3-setuptools python3-markupsafe python3-prometheus-client python3-tornado python3-wheel build-essential tini
 COPY start.sh /usr/src/app/jupyter/start.sh
 
 COPY requirements.txt /root/
