--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,14 +45,14 @@ services:
       - "8888:8888"
     volumes:
       - 'jupyterlab-data:/data'
-  ap:
-    build: ./ap
-    restart: always
-    network_mode: host
-    privileged: true
-    labels:
-      io.balena.features.dbus: '1'
-      io.balena.features.firmware: '1'
+#  ap:
+#    build: ./ap
+#    restart: always
+#    network_mode: host
+#    privileged: true
+#    labels:
+#      io.balena.features.dbus: '1'
+#      io.balena.features.firmware: '1'
 #  bridge:
 #    restart: always
 #    build: ./bridge
