Dockerfile: Add node-red nodes for serial support and influxdb
Signed-off-by: Alex J Lennon <ajlennon@dynamicdevices.co.uk>

--- a/nodered/Dockerfile.raspberrypi3
+++ b/nodered/Dockerfile.raspberrypi3
@@ -1,1 +1,4 @@
 FROM --platform=linux/arm nodered/node-red:1.0.2
+
+RUN npm install node-red-contrib-influxdb \
+                node-red-node-serialport
