--- a/nodered/Dockerfile.template
+++ b/nodered/Dockerfile.template
@@ -1,1 +1,4 @@
 FROM --platform=linux/%%BALENA_ARCH%% nodered/node-red:1.0.2
+
+RUN npm install node-red-contrib-influxdb \
+                node-red-node-serialport
