nodered: Dockerfile add node-red dashboard support
Signed-off-by: Alex J Lennon <ajlennon@dynamicdevices.co.uk>

--- a/nodered/Dockerfile
+++ b/nodered/Dockerfile
@@ -1,5 +1,6 @@
 FROM nodered/node-red:1.0.2
 
 RUN npm install node-red-contrib-influxdb \
-                node-red-node-serialport
+                node-red-node-serialport \
+                node-red-dashboard
 
