--- a/nodered/Dockerfile.raspberrypi3
+++ b/nodered/Dockerfile.raspberrypi3
@@ -1,4 +1,5 @@
 FROM --platform=linux/arm nodered/node-red:1.0.2
 
 RUN npm install node-red-contrib-influxdb \
-                node-red-node-serialport
+                node-red-node-serialport \
+                node-red-dashboard
