--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
     environment:
       - INFLUXDB_DB=ming_default
     volumes:
-      - 'influxdb-data:/data'
+      - 'influxdb-data:/var/lib/influxdb'
     ports:
       - "8086:8086"
   grafana:
